ignite & redis intialization made as lazy, jdk version upgrade to 17